# rlci

./: .gitignore  README.md  main.py  modal_train.py  pyproject.toml  requirements.txt
src/: agent.py  api.py  baselines.py  environment.py  evaluate.py  train.py  visualize.py
tests/: test_agent.py  test_api.py  test_baselines.py  test_environment.py  test_evaluate.py  test_train.py
